# allocator-memfd-secret

./: Cargo.toml  Changes.md  Readme.md
src/: lib.rs
tests/: global_alloc.rs  unmap_relieves_pressure.rs  usage.rs
